# stock_analysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  apresentacao_analise.ipynb  makefile  myapp.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml
stock_analysis/: __init__.py  app.py  sma.py
tests/: test_app.py
