[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = ["Yuri Ishizawa <yuriishizawa@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
streamlit = "^1.20.0"
seaborn = "^0.12.2"
plotly = "^5.13.1"
yfinance = "^0.2.12"
pandas-datareader = "^0.10.0"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
