[project]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = [{name = "Yuri Ishizawa", email = "yuriishizawa@gmail.com"}]
readme = "README.md"
dependencies = [
    "numpy>=1.24.2,<2.0.0",
    "pandas>=1.5.3,<2.0.0",
    "matplotlib>=3.7.1,<4.0.0",
    "streamlit>=1.20.0,<2.0.0",
    "seaborn>=0.12.2,<1.0.0",
    "plotly>=5.13.1,<6.0.0",
    "yfinance>=0.2.54,<0.3.0",
    "pandas-datareader>=0.10.0,<0.11.0",
    "scipy>=1.10.1,<2.0.0",
    "pre-commit>=3.5.0,<3.6.0",
    "loguru>=0.7.2,<0.8.0",
    "poetry-plugin-export>=1.8.0,<1.9.0"
]
requires-python = ">=3.10,<3.12"
optional-dependencies = { dev = [
    "jupyter>=1.0.0,<2.0.0"
] }
